# job-search-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: preferences.example.yaml
scripts/: com.sunilnjc.jobagent.prepare.plist
src/jobagent/: cli.py  config.py  models.py  service.py
src/jobagent/api/: main.py  runs.py  schemas.py
src/jobagent/drafting/: application_chat.py  cover_letter.py  gap_analysis.py  llm.py  resume_builder.py  resume_tailor.py
src/jobagent/matching/: eligibility.py  embeddings.py  ollama_rank.py
src/jobagent/profile/: resume_parser.py
src/jobagent/sources/: adzuna.py  ats_boards.py  base.py  manual_url.py  remoteok.py  text_clean.py  weworkremotely.py
src/jobagent/storage/: db.py
src/jobagent/tracking/: pipeline.py
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  filters.ts  types.ts
web/src/api/: client.ts
web/src/components/: ActionBar.tsx  ApplicationChat.tsx  ApplicationsTable.tsx  ExcludedList.tsx  FilterBar.tsx  JobCard.tsx  JobDetailModal.tsx  KanbanBoard.tsx
web/src/hooks/: useJobs.ts  useRun.ts
