[project]
name = "jobagent"
version = "0.1.0"
description = "Personal job search agent: fetch, match, draft, track."
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "ollama>=0.2",
    "anthropic>=0.34",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
jobagent = "jobagent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
